2015-04-29 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected wrong code sample in documentation, resolves #66596 (thanks to Martin Hummer)

2014-06-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.5.0, resolves #57767

2014-04-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Implemented new API from base connector, resolves #57554

2013-07-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.1, resolves #50257
	* Released version 1.4.0

2013-01-24 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.3.0

2013-01-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.0, resolves #44464

2012-09-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.2.0

2012-09-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Cleaned up some code, verified compatibility with TYPO3 4.7, raised requirements to 4.5, resolves #41237

2012-09-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added sample configuration, resolves #40918
	* Added possibility to set locale explicitly, resolves #25703 (thanks to Sebastian Steinmetz)

2011-03-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.1.0

2011-03-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added throwing of exceptions when query fails, resolves #10706

2010-11-30 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Moved extension configuration labels to locallang file

2010-09-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected handling of empty files (avoid PHP warnings)

2010-04-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed service to use new connector base class
	* Released version 1.0.1

2009-01-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 0.1.0