@@ -1,3 +1,7 @@
+2015-05-13 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Corrected handling of non-Unix line endings, resolves #66899 (thanks to Simon Schaufelberger)
+
 2015-04-29 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Corrected wrong code sample in documentation, resolves #66596 (thanks to Martin Hummer)
